# uvicorn-browser

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  deploy-docs.yml
docs/docs/: index.md
tests/: test_smoke.py
uvicorn_browser/: __main__.py  driver.py  main.py  reload.py
