[metadata]
name = uvicorn-browser
version = 0.2.0
description = Reload your Browser with code changes! :sparkles:
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kludex/uvicorn-browser
author = Marcelo Trylesinski
author_email = marcelotryle@email.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
project_urls =
    Twitter = https://twitter.com/marcelotryle

[options]
packages = find:
include_package_data = True
install_requires =
    uvicorn==0.17.6
    selenium
    typing-extensions; python_version < '3.8'
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    uvicorn = uvicorn_browser.main:main
    uvicorn-browser = uvicorn_browser.main:main

[flake8]
statistics = True
max-line-length = 88
ignore = E203,E501,W503
